@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when the Stats GUI window is destroyed by another mod
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2022-01-26
